--- a/20191005.md
+++ b/20191005.md
@@ -172,6 +172,29 @@ ex：
 #### 6.自己完成一个ArrayList<E>
 
 ```java
+代码在Day20191005中，详见我的github javaSeLearn
+https://github.com/beichenhpy/javaSeLearn/tree/master/Day20191005
+```
 
+#### 7.ArrayList重点
+
+```java
+调用无参构造方法，创建的ArrayList底层保存数据类型的Object类型数组，这个初始化容量是多少？
+	初始化容量是 10 ,以为在ArrayList中，有一个私有化静态final修饰的成员变量
+	private static final int DEFUALT_CAPACITY = 10;
+特征：
+	增删慢:
+		增加:
+			1.添加数据时，涉及到扩容问题，涉及到数组的拷贝过程，浪费时间
+			2.指定位置添加元素时，导致元素整体向右移动，浪费时间
+		删除:
+			1.删除元素后，从删除位置开始，底层Object数组中，会整体左移，浪费时间
+	查找快:
+		1.ArrayList的底层是Object数组，所涉及到使用数组名+下标方式访问的情况效率很高，cpu直接操作内存空间首地址的过程
+```
+
+```
+ArrayList使用场景:
+	对于数据的查询较大，但是对于数据的删除增加不多(图书馆，人力管理系统)
 ```
 
