--- a/20190911.md
+++ b/20190911.md
@@ -65,7 +65,7 @@ switch (/*条件匹配*/) {
       /*处理方式1*/
     break;
   case /*常量2*/:
-      /*吃力方式2*/
+      /*处理方式2*/
     break;
   case /*常量3*/:
       /*处理方式3*/
