--- a/20190927.md
+++ b/20190927.md
@@ -29,7 +29,7 @@ categories: Java
 		<无意义占位符英文大写字母><T><E>
 使用泛型用于约束数据类型，能够让代码更有普适性
 格式：
-		ArrayList<String> list = new ArrayList<>(); idea/adroid
+		ArrayList<String> list = new ArrayList<>(); idea/android
 		ArrayList<String> list = new ArrayList<String>(); eclipse
 		告知java ArrayList 中只能保存String 类型
 错误格式：
