--- a/20200111.md
+++ b/20200111.md
@@ -51,11 +51,11 @@ Set接口没有特有方法，完全可以使用Collection下的方法
 
 #### 4.1 HashSet原理
 
-![HashSet存储原理](E:\javaSe学习\javaSeNotes\img\HashSet存储原理.png)
+![HashSet存储原理](img\HashSet存储原理.png)
 
 #### 4.2 TreeSet原理
 
-![TreeSet存储原理](E:\javaSe学习\javaSeNotes\img\TreeSet存储原理.png)
+![TreeSet存储原理](img\TreeSet存储原理.png)
 
 ![TreeSet底层](E:\javaSe学习\javaSeNotes\img\TreeSet底层.png)
 
