--- a/20200111.md
+++ b/20200111.md
@@ -57,7 +57,7 @@ Set接口没有特有方法，完全可以使用Collection下的方法
 
 ![TreeSet存储原理](img\TreeSet存储原理.png)
 
-![TreeSet底层](E:\javaSe学习\javaSeNotes\img\TreeSet底层.png)
+![TreeSet底层](img\TreeSet底层.png)
 
 #### 5.匿名内部类
 
