--- a/20200111.md
+++ b/20200111.md
@@ -51,13 +51,13 @@ Set接口没有特有方法，完全可以使用Collection下的方法
 
 #### 4.1 HashSet原理
 
-![HashSet存储原理](img\HashSet存储原理.png)
+![HashSet存储原理](./img/HashSet存储原理.png)
 
 #### 4.2 TreeSet原理
 
-![TreeSet存储原理](img\TreeSet存储原理.png)
+![TreeSet存储原理](./img/TreeSet存储原理.png)
 
-![TreeSet底层](img\TreeSet底层.png)
+![TreeSet底层](./img/TreeSet底层.png)
 
 #### 5.匿名内部类
 
