--- a/20191005.md
+++ b/20191005.md
@@ -120,7 +120,7 @@ List接口特征：
 改：
 	E set(int index ,E e); //使用指定元素替换掉指定下标元素
 查：
-	E get(int index ,E e); //获取指定下标的元素
+	E get(int index); //获取指定下标的元素
 	int indexOf(Object obj); //查询指定元素在集合中的下标位置
 	int lastIndexOf(Object obj) //找出指定元素最后一次在集合中出现的位置
 	List<E> subList(int startIndex , int endIndex);//获取子List集合，从startIndex开始，到endIndex结束，要头不要尾
