--- a/20190921.md
+++ b/20190921.md
@@ -263,7 +263,7 @@ super关键字调用构造方法，父类的构造方法
 #### 1.3 重写【Override】
 
 ```java
-子类通过集成可以使用父类中的非私有化成员方法，但是父类的方法，不一定能够满足子类的需求，所有子类可以在不修改【方法声明】的情况下，对方法进行重写，从而满足子类的需求
+子类通过继承可以使用父类中的非私有化成员方法，但是父类的方法，不一定能够满足子类的需求，所有子类可以在不修改【方法声明】的情况下，对方法进行重写，从而满足子类的需求
 
 这里子类不修改【方法申明】是为了降低代码逻辑复杂度。
 
