--- a/20200114.md
+++ b/20200114.md
@@ -193,3 +193,57 @@ Thread类中成员方法:
 	如果程序中有且只有一个守护线程之后，会自动退出
 ```
 
+#### 9.线程声明周期
+
+![线程的生命周期](img/线程的生命周期.png)
+
+##### 9.1  wait() 和 notify() 方法
+
+```java
+wait()和notify()方法都是Object类中的方法
+
+wait()
+	1. 让调用该方法的线程进入一个阻塞状态
+	2. 需要通过对象调用，而且一般都是【锁对象】
+	3. 【线程进入阻塞状态，会解锁当前使用的锁对象】
+
+notify()
+	1. 获取一个线程
+	2. 也是需要通过对象调用，而且一般都是【锁对象】
+	3. 【唤醒其他线程，并且解锁锁对象】
+```
+
+##### 9.2 生产者和消费者【线程通信】
+
+```
+匹克 态极
+
+生产者是 Peak 匹克
+消费者是 wo
+	
+	消费者需要购买，结果没货，我需要进入等待状态。
+	生产者进入生产状态，匹克开始加班加点！！！
+	生产好了，告知消费者可以购买，给我发货
+	我进入准备收货状态。
+```
+
+##### 9.3 生产者消费者图例
+
+![生产者消费者图例](img/生产者消费者对应关系.png)
+
+##### 9.4 需要解决的问题
+
+```
+1. 如何让商品成为两个线程的共享资源
+	创建商品类对象，在消费者和生产者中定义一个成员变量，同时保存商品类对象的空间首地址，这里可以使用构造方法来完成。使用同一个对象保存的地址相同
+	
+2. 两个线程没有使用锁，会导致代码错乱，如何选择锁对象
+	选择商品作为锁对象
+
+3. 出现了死锁！！！！
+	因为生产者进入生产状态之后，并没有从线程代码中运行结束处理，没有打开锁！！！
+
+4. 使用notify和wait完成线程之间的通信
+	这两个方法，都可以开锁！！！
+```
+
