--- a/项目第一天.md
+++ b/项目第一天.md
@@ -21,9 +21,10 @@
 ```java
  String  checkcodeServer = (String)session.getAttribute("CHECKCODE_SERVER");
         session.removeAttribute("CHECKCODE_SERVER");
-        if (checkcodeServer == null || !checkcodeServer.equalsIgnoreCase(check))
-            //这里是当session中的验证码为空或者session的验证码不和输入的相同时
-            由于checkcodeServer写在前面可能产生空指针，所以这么写，把两种情况列出来
+        if (!check.equalsIgnoreCase(checkcodeServer))
+           //这里直接这样写就可以 同时也避免了空指针
+            System.out.println("".equals(null)); //恒为false
+           
 ```
 
 ```
